--- a/index.html
+++ b/index.html
@@ -28,33 +28,28 @@
 
       <div class="dot">
         <!-- <div class="triangle"></div> -->
-        <svg height="100%" width="100%">
+        <svg
+          height="100%"
+          width="100%"
+          viewBox="0 0 100 100"
+          preserveAspectRatio="none"
+        >
           <defs>
             <mask id="mask" x="0" y="0" width="100%" height="100%">
-              <rect x="0" y="0" width="100%" height="100%" fill="#fff" />
-              <circle class="circledot" cx="50%" cy="50%" r="15%" />
+              <rect x="0" y="0" width="100" height="100" fill="#fff" />
+              <!-- Equilateral Triangle -->
+              <polygon class="tria" points="50,20 30,70 70,70" fill="#000" />
             </mask>
           </defs>
           <rect
             x="0"
             y="0"
-            width="100%"
-            height="100%"
+            width="100"
+            height="100"
             mask="url(#mask)"
             fill-opacity="1"
           />
         </svg>
-        <!-- <svg height="100%" width="100%">
-          <rect x="0" y="0" width="100%" height="100%" fill="#000" />
-          <circle
-            class="circledot"
-            cx="50%"
-            cy="50%"
-            r="15"
-            fill="
-            Transparent"
-          />
-        </svg> -->
       </div>
       <div class="div1">
         <p class="title title1" style="color: aliceblue">MONKEY&nbsp;tALKIES</p>
